<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HMIStatus" Id="{1a2e7791-b4a7-44b4-9707-66a3a956ba8d}">
    <Declaration><![CDATA[TYPE ST_HMIStatus :
STRUCT
	ComponentStatus : REFERENCE TO ST_ComponentStatus;
	HmiStatus : ST_HmiComponentAPI;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>